# i3neostatus

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.am  README.md  build_all.sh  configure.ac  i3neostatus.conf
doc/backlight/: README.md  i3blocks.conf
doc/battery/: README.md  i3blocks.conf
doc/datetime/: README.md  i3blocks.conf
doc/ethernet/: README.md  i3blocks.conf
doc/volume/: README.md  i3blocks.conf
doc/wireless/: README.md  i3blocks.conf
include/: block_state.hpp  click_event_listener.hpp  color.hpp  config_file.hpp  debug_print.hpp  define_enum_flag_operators.hpp  dyn_lib_load.hpp  dyn_load_lib.hpp  dyn_load_module.hpp  generic_callback.hpp  hide_block.hpp  i3bar_data.hpp  i3bar_protocol.hpp  libconfigfile  make_block.hpp  message_printing.hpp  misc.hpp  module_api.hpp  module_base.hpp  module_dev.hpp  module_error.hpp  module_handle.hpp  module_id.hpp  program_constants.hpp  theme.hpp  thread_comm.hpp
include/i3neostatus/: Makefile.am  block_state.hpp  i3bar_data.hpp  module_api.hpp  module_base.hpp  module_dev.hpp  module_id.hpp  plugin_api.hpp  plugin_base.hpp  plugin_dev.hpp  plugin_factory.hpp  plugin_id.hpp
include_install/: block_state.hpp  hide_block.hpp  i3bar_data.hpp  module_api.hpp  module_base.hpp  module_dev.hpp  module_id.hpp
include_install/libconfigfile/: array_node.hpp  character_constants.hpp  color.hpp  constexpr_tolower_toupper.hpp  error_messages.hpp  float_node.hpp  integer_node.hpp  libconfigfile.hpp  map_node.hpp  node.hpp  node_ptr.hpp  node_types.hpp  numeral_system.hpp  parser.hpp  string_node.hpp  syntax_error.hpp  version.hpp
modules/: Makefile.am  test_module.cpp
modules_test/simple_date/: Makefile  simple_data.cpp  simple_date.cpp
modules_test/simple_date/include/: simple_date.hpp
modules_test/simple_date/src/: simple_date.cpp
old/: build_all.sh
old/doc/backlight/: README.md  i3blocks.conf
old/doc/battery/: README.md  i3blocks.conf
old/doc/datetime/: README.md
old/doc/volume/: README.md  i3blocks.conf
old/doc/wireless/: README.md  i3blocks.conf
old/src/blocklets/backlight/: backlight.hpp
old/src/blocklets/battery/: battery.hpp  build.sh
old/src/blocklets/datetime/: datetime
old/src/blocklets/volume/: main.cpp  pulseaudio_volume.cpp  volume.cpp
old/src/blocklets/wireless/: main.cpp
old/src/common/: common.cpp  common.hpp
old/src/common/network/: network.cpp
plugins/: Makefile.am  plugins_builtin.hpp  test_plugin.cpp
source/: click_event_listener.cpp  color.cpp  config_file.cpp  dyn_load_lib.cpp  hide_block.cpp  i3bar_data_conversions.cpp  i3bar_protocol.cpp  main.cpp  make_block.cpp  message_printing.cpp  misc.cpp  module_api.cpp  module_base.cpp  module_handle.cpp  module_id.cpp  thread_comm.cpp
src/: Makefile.am  block_state.hpp  click_event_listener.cpp  click_event_listener.hpp  config_file.cpp  config_file.hpp  dyn_lib_load.cpp  dyn_load_lib.cpp  dyn_load_module.cpp  dynamic_loader.cpp  dynamic_loader.hpp  hide_block.cpp  hide_block.hpp  i3bar_data.hpp  i3bar_data_conversions.hpp  i3bar_protocol.cpp  i3bar_protocol.hpp  main.cpp  make_block.cpp  message_printing.cpp  message_printing.hpp  module_api.cpp  module_base.cpp  module_dev.hpp  module_error.cpp  module_error.hpp  module_handle.cpp  module_handle.hpp  module_id.cpp  module_id.hpp  plugin_api.cpp  plugin_api.hpp  plugin_base.cpp  plugin_base.hpp  plugin_dev.hpp  plugin_error.cpp  plugin_error.hpp  plugin_factory.hpp  plugin_handle.cpp  plugin_handle.hpp  (+6 more)
src/blocklets/backlight/: backlight.cpp  backlight.hpp  build.sh  main.cpp
src/blocklets/battery/: battery.cpp  battery.hpp  main.cpp
src/blocklets/ethernet/: build.sh  ethernet.cpp  ethernet.hpp  main.cpp
src/blocklets/volume/: alsa_volume.cpp  alsa_volume.hpp  build.sh  globals.cpp  globals.hpp  i3status_pulse.cpp  i3status_pulse.hpp  i3status_queue.h  main.cpp  pulseaudio_volume.cpp  pulseaudio_volume.hpp  volume  volume.cpp  volume.hpp
src/blocklets/wireless/: build.sh  main.cpp  wireless.cpp  wireless.hpp
src/common/: common.cpp  common.hpp
src/common/missing_dependency_error/: missing_dependency_error.cpp  missing_dependency_error.hpp
src/common/network/: network.hpp
test_modules/simple_date/: Makefile
test_modules/simple_date/include/: simple_date.hpp
test_modules/simple_date/src/: simple_date.cpp
